@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2006, 2015, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2006, 2016, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -54,7 +54,7 @@ public class T6412669 extends AbstractProcessor {
             String[] opts = {
                 "-proc:only",
                 "-processor", T6412669.class.getName(),
-                "-XaddExports:jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED"
+                "--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED"
             };
             StringWriter sw = new StringWriter();
             JavacTask task = tool.getTask(sw, fm, null, Arrays.asList(opts), null, files);
